Fixed bug #39361 (Removed warning on empty haystack inside mb_strstr()).